--- a/OtoGalarim/app/src/main/res/layout/activity_register.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_register.xml
@@ -1,15 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:background="#fddf04"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hkadirdemircan.otogalarim.LoginActivity">
+    android:background="#fddf04"
+    tools:context=".RegisterActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -30,12 +31,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:src="@drawable/caricon"
-                />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -75,19 +70,11 @@
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/action_sign_in"
                 android:background="@drawable/menu_buton_back"
                 android:textColor="#0F3057"
-                android:layout_marginTop="16dp"
-                android:text="Oturum Aç"
                 android:textStyle="bold" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Yeni Hesap Oluştur"
-                android:id="@+id/registerText"
-                android:textStyle="bold"
-                android:gravity="right"
-                android:layout_marginTop="10dp"/>
 
         </LinearLayout>
     </ScrollView>
