--- a/OtoGalarim/app/src/main/res/layout/activity_dogrulama.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_dogrulama.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#fddf04"
+    android:background="#48569E"
     tools:context=".DogrulamaActivity">
 
     <!-- Login progress -->
