--- a/OtoGalarim/app/src/main/res/layout/activity_yakit.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_yakit.xml
@@ -49,6 +49,6 @@
         android:layout_marginRight="60dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_buton_back"
-        android:text="İleri"/>
+        android:text="İlan Ver"/>
 
 </LinearLayout>
