--- a/OtoGalarim/app/src/main/res/layout/content_main.xml
+++ b/OtoGalarim/app/src/main/res/layout/content_main.xml
@@ -48,6 +48,7 @@
                 android:textStyle="bold" />
 
             <Button
+                android:id="@+id/ilanVerButon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
