activity arası ileri/geri olayları eklendi ve ileri/geri butonlarına anim eklendi.

--- a/OtoGalarim/app/src/main/res/layout/activity_arac_bilgileri.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_arac_bilgileri.xml
@@ -52,12 +52,22 @@
         android:hint="Araç Kilometresini Giriniz"/>
 
     <Button
-        android:id="@+id/aracBilgisiButon"
+    android:id="@+id/aracBilgisiButon"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="60dp"
+    android:layout_marginRight="60dp"
+    android:layout_marginTop="20dp"
+    android:background="@drawable/menu_buton_back"
+    android:text="İleri"/>
+
+    <Button
+        android:id="@+id/aracBilgisiButonGeri"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_buton_back"
-        android:text="İleri"/>
+        android:text="Geri"/>
 </LinearLayout>
