--- a/OtoGalarim/app/src/main/res/layout/activity_ilan_bilgileri.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_ilan_bilgileri.xml
@@ -32,7 +32,7 @@
         android:textColorHint="#203040"
         android:hint="İlan Açıklamasını Giriniz"/>
 
-    <Button
+     <Button
         android:id="@+id/ilanBilgisiButon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,6 +41,17 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_buton_back"
         android:text="İleri"/>
+
+    <Button
+        android:id="@+id/ilanBilgisiButonGeri"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/menu_buton_back"
+        android:text="Geri"/>
+
 
 
 </LinearLayout>
