--- a/OtoGalarim/app/src/main/res/layout/activity_adres_bilgileri.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_adres_bilgileri.xml
@@ -45,4 +45,14 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/menu_buton_back"
         android:text="İleri"/>
+
+    <Button
+        android:id="@+id/adresBilgisiButonGeri"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/menu_buton_back"
+        android:text="Geri"/>
 </LinearLayout>
