--- a/OtoGalarim/app/src/main/res/layout/activity_yakit.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_yakit.xml
@@ -51,4 +51,14 @@
         android:background="@drawable/menu_buton_back"
         android:text="İlan Ver"/>
 
+    <Button
+        android:id="@+id/yakitTuketimBilgisiButonGeri"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/menu_buton_back"
+        android:text="Geri"/>
+
 </LinearLayout>
