ilan resimi ekleme işlemi yapıldı, ücret detayı eklendi.

--- a/OtoGalarim/app/src/main/res/layout/activity_ilan_bilgileri.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_ilan_bilgileri.xml
@@ -32,6 +32,13 @@
         android:textColorHint="#203040"
         android:hint="İlan Açıklamasını Giriniz"/>
 
+    <EditText
+        android:id="@+id/ilanFiyatEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColorHint="#203040"
+        android:hint="Fiyat Giriniz"/>
+
      <Button
         android:id="@+id/ilanBilgisiButon"
         android:layout_width="match_parent"
