--- a/OtoGalarim/app/src/main/res/layout/activity_ilan_resimler.xml
+++ b/OtoGalarim/app/src/main/res/layout/activity_ilan_resimler.xml
@@ -30,7 +30,7 @@
         android:text="Resim Seç"/>
     <ImageView
         android:id="@+id/secilenIlanResmiImageView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"/>
 
