--- a/OtoGalarim/app/src/main/res/layout/content_main.xml
+++ b/OtoGalarim/app/src/main/res/layout/content_main.xml
@@ -35,6 +35,7 @@
             android:orientation="horizontal">
 
             <Button
+                android:id="@+id/ilanlarButon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
@@ -103,7 +104,7 @@
                 android:text="Mesajlarım" />
 
             <Button
-
+                android:id="@+id/ilanlarimMenuButon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
