--- a/OtoGalarim/app/src/main/res/layout/ilanlarlayout.xml
+++ b/OtoGalarim/app/src/main/res/layout/ilanlarlayout.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="horizontal"
-    android:background="#fff"
+    android:background="#EEEEEE"
     android:padding="10dp"
     android:layout_margin="3dp"
+
     android:layout_height="wrap_content">
 
 
     <ImageView
-        android:id="@+id/ilanlarimIlanResim"
+        android:id="@+id/ilanlarIlanResim"
         android:layout_width="0dp"
         android:layout_weight="1.1"
         android:layout_height="100dp" />
@@ -18,25 +19,37 @@
         android:layout_width="0dp"
         android:layout_weight="3"
         android:orientation="vertical"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="10dp"
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/ilanlarimIlanBaslik"
+            android:id="@+id/ilanlarIlanBaslik"
             android:text="Deneme"
             android:textColor="#0F3057"
             android:textSize="20dp"
             android:layout_alignParentTop="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        
+
+
+
         <TextView
-            android:id="@+id/ilanlarimIlanFiyat"
+            android:id="@+id/ilanlarIlanFiyat"
             android:text="Deneme"
             android:textColor="#0F3057"
             android:textSize="15dp"
             android:layout_alignParentBottom="true"
-           android:gravity="right|bottom"
+            android:gravity="right|bottom"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/ilanlarIlanAdres"
+            android:text="Deneme"
+            android:textColor="#0F3057"
+            android:textSize="20dp"
+            android:layout_above="@+id/ilanlarIlanFiyat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </RelativeLayout>
